added data download and delete options -fixed red box peaking under topbar -edited roblox settings style

--- a/js/Theme/Pages/all.css
+++ b/js/Theme/Pages/all.css
@@ -32,6 +32,12 @@
 #rk-desktopapp:hover > span {color: #f22;}
 
 
+/* Fix error message peaking under navbar */
+html .alert-system-feedback .alert {
+	top: -25%;
+}
+
+
 /*content*/
 #container-main > div.content {
 
