--- a/roblokis/js/Theme/Pages/games.css
+++ b/roblokis/js/Theme/Pages/games.css
@@ -170,11 +170,31 @@ div.container-list.games-detail div.game-card-container > a:hover > a {
 
 
 
-#game-instances > div.section-content-off {
+div.section-content-off {
+	background-color: transparent !important;
+}
+
+
+
+
+/* Default Servers  */
+
+#game-instances #running-game-instances-container .card-list {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.server-list-section > div.section > div,
+#game-instances ul.card-list > li > div.card-item {
 	background-color: transparent;
 }
-div.section-content-off {
-	background-color: transparent;
+#game-instances ul.card-list > li > div.card-item {
+	padding: 0 !important;
+	min-height: 0 !important;
+}
+
+#game-instances ul.card-list li div.server-player-count-gauge {
+	margin: 8px 0 4px;
 }
 
 
@@ -185,32 +205,18 @@ div.section-content-off {
 	overflow: visible;
 }
 #rbx-private-running-games > ul {
-	display: flex;
-	flex-wrap: wrap;
 	row-gap: 0px;
 	column-gap: 0px;
 }
 
-#rbx-private-running-games > div.section-content-off,
-#rbx-private-running-games > ul > p.section-content-off,
-#rbx-private-servers > div.rbx-private-server-item-container > p,
-#game-instances #rbx-private-running-games > ul > li > div.card-item {
+#rbx-private-servers > div.rbx-private-server-item-container > p {
 	background-color: transparent;
 }
 
-#game-instances #rbx-private-running-games > ul > li > div.card-item {
-	padding: 0 !important;
-	min-height: 0 !important;
-	flex-direction: column-reverse;
-}
-
 #game-instances #rbx-private-running-games > ul > li {
-	display: flex;
-	flex-direction: column-reverse;
 	transition: all 400ms;
 	transition-timing-function: cubic-bezier(0.21, 1.46, 0.99, 0.99);
 
-	max-width: calc(calc(100% / var(--rk-privateserver-column, 5)) - calc(var(--rk-privateserver-gap, 0.3%) * 2));
 	margin: var(--rk-privateserver-gap, 0.3%);
 	color: var(--rk-privateserver-bright-color);
 
@@ -223,17 +229,13 @@ div.section-content-off {
 	background: var(--rk-privateserver-background);
 	background-size: var(--rk-privateserver-background-image-size);
 }
-/*#rbx-private-running-games > ul:hover > li:not(li:hover) {
-	opacity: 0.5;
-}*/
 #rbx-private-running-games > ul > li:hover {
-	transform: var(--rk-basic-animations, scale(1.2));
+	transform: var(--rk-basic-animations, scale(1.1));
 	opacity: var(--rk-basic-animations, 1);
 	z-index: var(--rk-basic-animations, 10);
 }
 
-#rbx-private-running-games > ul > li > div.card-item > div.rbx-private-game-server-details > span > button,
-#rbx-private-running-games > ul > li > div.card-item > div.rbx-private-game-server-details > a {
+#rbx-private-running-games > ul > li > div.card-item > div.rbx-private-game-server-details > span > * {
 	margin-top: 0 !important;
 	color: var(--rk-privateserver-button-color);
 
@@ -248,7 +250,7 @@ div.section-content-off {
 	background-size: var(--rk-privateserver-button-background-image-size);
 }
 
-#rbx-private-running-games > ul > li > div.card-item > div.rbx-private-game-server-details > div.section-header > span {
+#rbx-private-running-games ul li div.game-server-details > div.section-header > span {
 	font-size: 14px;
 	display: inline-block;
 	text-overflow: ellipsis;
@@ -257,47 +259,10 @@ div.section-content-off {
 	white-space: nowrap;
 }
 
-#rbx-private-running-games > ul > li > div.card-item > div.player-thumbnails-container {
-	float: none;
-	width: auto;
-}
-
-#rbx-private-running-games > ul > li > div.card-item > div.player-thumbnails-container > span {
-	margin: 0px -10px 6px 0px;
-	top: 8px;
-	width: 34px;
-	height: 34px;
-}
-
-#rbx-private-running-games > ul > li > div.card-item > div.player-thumbnails-container > span#rk-plr-counter {
-	margin: 0px -8px 6px 0px;
-	display: inline-grid;
-	align-content: center;
-	font-weight: bold;
-	font-size: 16px;
-	word-break: break-all;
-	z-index: 1;
-	text-align: center;
-}
-
-.max-players-text #rbx-private-running-games > ul > li > div.card-item > div.player-thumbnails-container > span#rk-plr-counter {
-	font-size: 10px;
-}
-
-#rbx-private-running-games > ul > li > div.card-item > div.rbx-private-game-server-details {
-	float: none;
-	border: none;
-	padding: 0;
-	width: auto;
-	margin-right: 0px;
-	min-width: 0px;
-}
-
 #rbx-private-running-games > ul > li > div.card-item > div.rbx-private-game-server-details > div.rbx-private-owner > a.owner-avatar > img {
 	background-color: var(--rk-privateserver-owner-background, #d4d4d4);
 }
 
-#rbx-private-running-games > ul > li > div.card-item > div.rbx-private-game-server-details > div.rbx-private-game-server-status,
 html:not([data-btr-loaded="true"]) #rbx-private-running-games > ul > li > div.card-item > div.rbx-private-game-server-details > div.rbx-private-owner > a.text-name,
 #rbx-private-running-games > ul > li > div.card-item > div.rbx-private-game-server-details > div.rbx-private-server-subscription-alert {
 	display: none;
@@ -331,28 +296,11 @@ html:not([data-btr-loaded="true"]) #rbx-private-running-games > ul > li > div.ca
 
 
 /* Friends Servers  */
-#rbx-friends-running-games #rbx-friends-game-server-item-container {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-#rbx-friends-running-games  > div.section-content-off,
-#rbx-friends-game-server-item-container.section-content-off,
-#game-instances #rbx-friends-game-server-item-container > li > div.card-item {
-	background-color: transparent;
-}
-
-#game-instances #rbx-friends-game-server-item-container > li > div.card-item {
-	padding: 0 !important;
-	min-height: 0 !important;
-	flex-direction: column-reverse;
-}
-
 #game-instances #rbx-friends-game-server-item-container > li {
 	transition: all 400ms;
 	transition-timing-function: cubic-bezier(0.21, 1.46, 0.99, 0.99);
 
-	width: calc(calc(100% / var(--rk-friendsserver-column, 5)) - calc(var(--rk-friendsserver-gap, 0.3%) * 2));
+	width: calc(calc(100% / var(--rk-friendsserver-column, 4)) - calc(var(--rk-friendsserver-gap, 0.3%) * 2));
 	margin: var(--rk-friendsserver-gap, 0.3%);
 
 
@@ -365,17 +313,13 @@ html:not([data-btr-loaded="true"]) #rbx-private-running-games > ul > li > div.ca
 	background: var(--rk-friendsserver-background);
 	background-size: var(--rk-friendsserver-background-image-size);
 }
-/*#rbx-friends-game-server-item-container:hover > li:not(li:hover) {
-	opacity: 0.5;
-}*/
 #rbx-friends-game-server-item-container > li:hover {
 	transform: var(--rk-basic-animations, scale(1.2));
 	opacity: var(--rk-basic-animations, 1);
 	z-index: var(--rk-basic-animations, 10);
 }
 
-#rbx-friends-game-server-item-container > li > div.card-item > div.rbx-friends-game-server-details > span > button,
-#rbx-friends-game-server-item-container > li > div.card-item > div.rbx-friends-game-server-details > a {
+#rbx-friends-game-server-item-container li div.rbx-friends-game-server-details > span > * {
 	margin-top: 0 !important;
 	color: var(--rk-friendsserver-button-color);
 
@@ -390,45 +334,7 @@ html:not([data-btr-loaded="true"]) #rbx-private-running-games > ul > li > div.ca
 	background-size: var(--rk-friendsserver-button-background-image-size);
 }
 
-#rbx-friends-game-server-item-container > li > div.card-item > div.player-thumbnails-container {
-	float: none;
-	width: auto;
-	align-self: flex-start;
-}
-
-#rbx-friends-game-server-item-container > li > div.card-item > div.player-thumbnails-container > span {
-	margin: 0px -10px 6px 0px;
-	top: 8px;
-	width: 34px;
-	height: 34px;
-}
-
-#rbx-friends-game-server-item-container > li > div.card-item > div.player-thumbnails-container > span#rk-plr-counter {
-	margin: 0px -8px 6px 0px;
-	display: inline-grid;
-	align-content: center;
-	font-weight: bold;
-	font-size: 16px;
-	word-break: break-all;
-	z-index: 1;
-	text-align: center;
-}
-
-.max-players-text #rbx-friends-game-server-item-container > li > div.card-item > div.player-thumbnails-container > span#rk-plr-counter {
-	font-size: 10px;
-}
-
-#rbx-friends-game-server-item-container > li > div.card-item > div.game-server-details,
-#rbx-friends-game-server-item-container > li > div.card-item > div.rbx-game-server-details {
-	float: none;
-	border: none;
-	padding: 0;
-	width: auto;
-}
-
-#rbx-friends-game-server-item-container > li > div.card-item > div.game-server-details > div.rbx-friends-game-server-status,
-#rbx-friends-game-server-item-container > li > div.card-item > div.rbx-game-server-details > div.rbx-friends-game-server-status {
-	font-size: 90%;
+#rbx-friends-game-server-item-container li div.game-server-details > div.friends-in-server-label {
 	text-overflow: ellipsis;
 	overflow: hidden;
 	color: var(--rk-friendsserver-dark-color);
@@ -439,23 +345,12 @@ html:not([data-btr-loaded="true"]) #rbx-private-running-games > ul > li > div.ca
 
 
 /* Small Servers  */
-#rbx-small-running-games  > div.section-content-off {
-	background-color: transparent;
-}
-#rbx-small-game-server-item-container {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-#rbx-small-game-server-item-container.section-content-off {
-	background-color: transparent;
-}
-
 #game-instances #rbx-small-game-server-item-container > li {
+	display: block;
 	transition: all 400ms;
 	transition-timing-function: cubic-bezier(0.21, 1.46, 0.99, 0.99);
 
-	width: calc(calc(100% / var(--rk-smallserver-column, 5)) - calc(var(--rk-smallserver-gap, 0.3%) * 2));
+	width: calc(calc(100% / var(--rk-smallserver-column, 4)) - calc(var(--rk-smallserver-gap, 0.3%) * 2));
 	margin: var(--rk-smallserver-gap, 0.3%);
 
 
@@ -468,17 +363,13 @@ html:not([data-btr-loaded="true"]) #rbx-private-running-games > ul > li > div.ca
 	background: var(--rk-smallserver-background);
 	background-size: var(--rk-smallserver-background-image-size);
 }
-/*#rbx-small-game-server-item-container:hover > li:not(li:hover) {
-	opacity: 0.5;
-}*/
 #rbx-small-game-server-item-container > li:hover {
 	transform: var(--rk-basic-animations, scale(1.2));
 	opacity: var(--rk-basic-animations, 1);
 	z-index: var(--rk-basic-animations, 10);
 }
 
-#rbx-small-game-server-item-container > li > div.rbx-game-server-details > span > button,
-#rbx-small-game-server-item-container > li > div.rbx-game-server-details > a {
+#rbx-small-game-server-item-container li div.game-server-details > span > * {
 	margin-top: 0 !important;
 	color: var(--rk-smallserver-button-color);
 
@@ -492,46 +383,9 @@ html:not([data-btr-loaded="true"]) #rbx-private-running-games > ul > li > div.ca
 	background: var(--rk-smallserver-button-background, transparent);
 	background-size: var(--rk-smallserver-button-background-image-size);
 }
-#rbx-small-game-server-item-container > li > div.section-right {
-	float: none;
-	width: auto;
-}
 
-#rbx-small-game-server-item-container > li > div.section-right > span {
-	margin: 0px -8px 6px 0px;
-	top: 8px;
-	width: 34px;
-	height: 34px;
-}
-
-#rbx-small-game-server-item-container > li > div.section-right > span#rk-plr-counter {
-	margin: 0px -8px 6px 0px;
-	display: inline-grid;
-	align-content: center;
-	font-weight: bold;
-	font-size: 16px;
-	word-break: break-all;
-	z-index: 1;
-	text-align: center;
-	background-color: lightgray;
-	color: black;
-}
-
-.max-players-text #rbx-small-game-server-item-container > li > div.section-right > span#rk-plr-counter {
-	font-size: 10px;
-}
-
-#rbx-small-game-server-item-container > li > div.game-server-details,
-#rbx-small-game-server-item-container > li > div.rbx-game-server-details {
-	float: none;
-	border: none;
-	padding: 0;
-	width: auto;
-}
-
-#rbx-small-game-server-item-container > li > div.game-server-details > div.rbx-game-server-status,
-#rbx-small-game-server-item-container > li > div.rbx-game-server-details > div.rbx-game-server-status {
-	display: none;
+#game-instances #rbx-small-game-server-item-container > li[hidden] {
+	display: none !important;
 }
 
 
@@ -539,42 +393,13 @@ html:not([data-btr-loaded="true"]) #rbx-private-running-games > ul > li > div.ca
 
 
 /* Public Servers  */
-#rbx-running-games > div.container-header > div.server-list-options {
-	display: none;
-}
-#rbx-running-games  > div.section-content-off {
-	background-color: transparent;
-}
-#rbx-running-games #rbx-game-server-item-container {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-#rbx-game-server-item-container.section-content-off,
-#rbx-running-games > div.section > div {
-	background-color: transparent;
-}
-
-#rbx-running-games > div.section-content-off,
-#rbx-running-games > ul > p.section-content-off,
-#game-instances #rbx-game-server-item-container li > div.card-item {
-	background-color: transparent;
-}
-
-#game-instances #rbx-game-server-item-container li > div.card-item {
-	padding: 0 !important;
-	min-height: 0 !important;
-	flex-direction: column-reverse;
-}
-
 #game-instances #rbx-game-server-item-container li {
 	transition: all 400ms;
 	transition-timing-function: cubic-bezier(0.21, 1.46, 0.99, 0.99);
 
 	display: list-item;
-	width: calc(calc(100% / var(--rk-publicserver-column, 5)) - calc(var(--rk-publicserver-gap, 0.3%) * 2));
+	width: calc(calc(100% / var(--rk-publicserver-column, 4)) - calc(var(--rk-publicserver-gap, 0.3%) * 2));
 	margin: var(--rk-publicserver-gap, 0.3%);
-	padding: 1%;
 
 
 	border-radius: var(--rk-publicserver-corners-radius, 20px);
@@ -586,17 +411,13 @@ html:not([data-btr-loaded="true"]) #rbx-private-running-games > ul > li > div.ca
 	background: var(--rk-publicserver-background);
 	background-size: var(--rk-publicserver-background-image-size);
 }
-/*#rbx-game-server-item-container:hover > li:not(li:hover) {
-	opacity: 0.5;
-}*/
 #rbx-game-server-item-container li:hover {
 	transform: var(--rk-basic-animations, scale(1.2));
 	opacity: var(--rk-basic-animations, 1);
 	z-index: var(--rk-basic-animations, 10);
 }
 
-#rbx-game-server-item-container li div.game-server-details > span > button,
-#rbx-game-server-item-container li div.rbx-game-server-details > span > button {
+#rbx-game-server-item-container li div.game-server-details > span > * {
 	margin-top: 0 !important;
 	color: var(--rk-publicserver-button-color);
 
@@ -611,160 +432,8 @@ html:not([data-btr-loaded="true"]) #rbx-private-running-games > ul > li > div.ca
 	background-size: var(--rk-publicserver-button-background-image-size);
 }
 
-#rbx-game-server-item-container li div.player-thumbnails-container {
-	float: none;
-	width: 100%;
-}
-
-#rbx-game-server-item-container li div.player-thumbnails-container > span {
-	margin: 0px -10px 6px 0px;
-	top: 8px;
-	width: 34px;
-	height: 34px;
-}
-
-#rbx-game-server-item-container li div.player-thumbnails-container > span#rk-plr-counter {
-	margin: 0px -8px 6px 0px;
-	display: inline-grid;
-	align-content: center;
-	font-weight: bold;
-	font-size: 16px;
-	word-break: break-all;
-	z-index: 1;
-	text-align: center;
-}
-
-.max-players-text #rbx-game-server-item-container li div.player-thumbnails-container > span#rk-plr-counter {
-	font-size: 10px;
-}
-
-#rbx-game-server-item-container li div.game-server-details,
-#rbx-game-server-item-container li div.rbx-game-server-details {
-	float: none;
-	border: none;
-	padding: 0;
-	width: auto;
-}
-
-#rbx-game-server-item-container li div.game-server-details > div.rbx-game-server-status,
-#rbx-game-server-item-container li div.rbx-game-server-details > div.rbx-game-server-status,
 #rbx-game-server-item-container.pagenav > li:not(.pagenav) {
 	display: none;
-}
-
-
-
-/* Filtered Servers  */
-#rbx-filtered-running-games  > div.section-content-off {
-	background-color: transparent;
-}
-#rbx-filtered-game-server-item-container {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-#rbx-filtered-game-server-item-container.section-content-off {
-	background-color: transparent;
-}
-
-#game-instances #rbx-filtered-game-server-item-container > li {
-	transition: all 400ms;
-	transition-timing-function: cubic-bezier(0.21, 1.46, 0.99, 0.99);
-
-	width: calc(calc(100% / var(--rk-filteredserver-column, 5)) - calc(var(--rk-filteredserver-gap, 0.3%) * 2));
-	margin: var(--rk-filteredserver-gap, 0.3%);
-
-
-	border-radius: var(--rk-filteredserver-corners-radius, 20px);
-
-	border-color: var(--rk-filteredserver-borders-color);
-	border-style: var(--rk-filteredserver-borders-style);
-	border-width: var(--rk-filteredserver-borders-size);
-
-	background: var(--rk-filteredserver-background);
-	background-size: var(--rk-filteredserver-background-image-size);
-}
-/*#rbx-filtered-game-server-item-container:hover > li:not(li:hover) {
-	opacity: 0.5;
-}*/
-#rbx-filtered-game-server-item-container > li:hover {
-	transform: var(--rk-basic-animations, scale(1.2));
-	opacity: var(--rk-basic-animations, 1);
-	z-index: var(--rk-basic-animations, 10);
-}
-
-#rbx-filtered-game-server-item-container > li > div.rbx-game-server-details > span > button,
-#rbx-filtered-game-server-item-container > li > div.rbx-game-server-details > a {
-	margin-top: 0 !important;
-	color: var(--rk-filteredserver-button-color);
-
-
-	border-radius: var(--rk-filteredserver-button-corners-radius, 8px);
-
-	border-color: var(--rk-filteredserver-button-borders-color, white);
-	border-style: var(--rk-filteredserver-button-borders-style, solid);
-	border-width: var(--rk-filteredserver-button-borders-size, 1px);
-
-	background: var(--rk-filteredserver-button-background, transparent);
-	background-size: var(--rk-filteredserver-button-background-image-size);
-}
-#rbx-filtered-game-server-item-container > li > div.section-right {
-	float: none;
-	width: auto;
-}
-
-#rbx-filtered-game-server-item-container > li > div.section-right > span {
-	margin: 0px -8px 6px 0px;
-	top: 8px;
-	width: 34px;
-	height: 34px;
-}
-
-#rbx-filtered-game-server-item-container > li > div.section-right > span#rk-plr-counter {
-	margin: 0px -8px 6px 0px;
-	display: inline-grid;
-	align-content: center;
-	font-weight: bold;
-	font-size: 16px;
-	word-break: break-all;
-	z-index: 1;
-	text-align: center;
-	background-color: lightgray;
-	color: black;
-}
-
-.max-players-text #rbx-filtered-game-server-item-container > li > div.section-right > span#rk-plr-counter {
-	font-size: 10px;
-}
-
-#rbx-filtered-game-server-item-container > li > div.section-left {
-	float: none;
-	border: none;
-	padding: 0;
-	width: auto;
-}
-
-#rbx-filtered-game-server-item-container > li > div.section-left > div.rbx-game-server-status {
-	display: none;
-}
-
-.filtered-servers-buttons {
-	user-select: none;
-	border: 1px solid #fff;
-	cursor: pointer;
-	/* display: inline-block; */
-	font-weight: 500;
-	height: auto;
-	text-align: center;
-	white-space: nowrap;
-	vertical-align: middle;
-	padding: 7px;
-	font-size: 16px;
-	line-height: 100%;
-	float: right;
-	background-color: transparent;
-	border-radius: 8px;
-	margin: 0 2px;
 }
 
 
@@ -784,7 +453,7 @@ html:not([data-btr-loaded="true"]) #rbx-private-running-games > ul > li > div.ca
 	border-style: var(--rk-pagenav-borders-style, solid);
 	border-width: var(--rk-pagenav-borders-size, 1px);
 
-	background: var(--rk-pagenav-background, rgb(0 0 0 / 0.4));
+	background: var(--rk-pagenav-background);
 	background-size: var(--rk-pagenav-background-image-size);
 }
 
